--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,9 +1,12 @@
 ---
-# tasks file for ufw
-- include_tasks: ubuntu.yml
-  when: ansible_distribution == "Ubuntu"
-- include_tasks: arch.yml
-  when: ansible_distribution == "Archlinux"
+
+- name: assert proper distribution
+  assert:
+    that:
+      - ansible_distribution in ['Kali', 'Ubuntu', 'Archlinux']
+    quiet: true
+
+- include_tasks: "{{ ansible_distribution }}.yml" 
 
 - name: ufw add ssh in rule
   ufw:
